Удалены HttpStatus'ы из всех классов исключений, т.к. они исключения обрабатываются в NurseryExceptionHandler и там указывается код ответа. Для определения размера файла в методе getAnimalPhoto класса AnimalService применён метод Files.readAllBytes(path).length. Для возвращения файла в методе getPhotoByteArray класса AnimalService применён метод Files.readAllBytes(path).